Fix some imports and overflow improvements

--- a/src/app/pages/departures/departures.component.scss
+++ b/src/app/pages/departures/departures.component.scss
@@ -10,3 +10,7 @@
 a {
     text-decoration: none;
 }
+
+.route-box{
+    max-height: 25VH;
+}
